# mcp-latin-tools

./: .gitignore  .mcp.json  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
mcp_latin/: __init__.py  __main__.py  server.py  tokenizer.py
