[project]
name = "mcp-latin"
version = "0.1.0"
description = "MCP server for Latin NLP, reported speech detection, and LiLa knowledge base querying"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.0",
    "fastmcp>=2.0.0",
    "uvicorn>=0.34.3",
    "click>=8.1.8",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "torch",
    "transformers",
    "huggingface-hub",
    "safetensors",
]

[project.scripts]
mcp-latin = "mcp_latin.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_latin"]